syntax = "proto3";
package GRPCProto;

option csharp_namespace = "GRPCService.GRPCProto";

service DataBase {
    rpc SavePdfFileInfo (PdfFileInfo) returns (JobInfo) {}
    rpc UpdateOrCreateJob (JobInfo) returns (JobInfo) {} 
    
    rpc RejectJobCall(RejectJob) returns (Empty) {}
    rpc DoneJobCall(DoneJob) returns (Empty) {}
}

service Recognize {
    rpc RecognizePdf (PdfFile) returns (JobInfo) {}
    
    rpc RejectJobCall(RejectJob) returns (Empty) {}
    rpc DoneJobCall(DoneJob) returns (Empty) {}
}

service FileServer {
    rpc SaveFile (File) returns (JobInfo) {}
    rpc GetFile (Path) returns (JobInfo) {}
    rpc DeleteFile (Path) returns (JobInfo) {}
}

service GateWay {
    rpc PostJobInfo (JobInfo) returns (Empty) {}
    rpc PostJobInfoWithBytes (JobInfoWithBytes) returns (Empty) {}
}

message Path {
    string path = 2;
}

message File {
    Path filePath = 1;
    bytes bytes = 2;
}

message PdfFile {
    bytes bytes = 2;
    repeated int32 pages = 3;
}

message Empty {
}

message JobInfo {
    EnumJobStatus JobStatus = 1; 
    string JobId = 2;
    string Message = 3;
}

message JobInfoWithBytes {
    JobInfo jobInfo = 1;
    bytes bytes = 2;
}

enum EnumJobStatus {
    EXECUTE = 0;
    DONE = 1;
    ERROR = 2;
    REJECTED = 3;
}

message PdfFileInfo {
    string MD5 = 1;
    int64 FileLength = 2;
    string Path = 3;
    string JobId = 4;
}

message CommonResponse {
    bool isError = 1;
    string ErrorMessage = 2;
}

message DatabaseCreateFileInfoResponse {
    CommonResponse error = 1;
    string fileId = 2;   
}

message RejectJob {
    string JobId = 1;
}

message DoneJob {
    string JobId = 1;
}